--- a/Web-control-V1.html
+++ b/Web-control-V1.html
@@ -270,11 +270,50 @@
                 // Send throttle and steering values to WebSocket server
                 var controls = throttle.toFixed(0) + "," + steering.toFixed(0);
                 ws.send(controls);
-                var delayInMilliseconds = 0; //delay
-            }
+                var delayInMilliseconds = 100; //delay
+                console.log("S: " + controls + ", T: ");
+            } 
+            var gamepad = navigator.getGamepads()[1];
+            if (gamepad) {
+                var throttle = ((gamepad.axes[1] - 1) * -90)-90; // Map vertical movement to throttle (0-100)
+                var steering = gamepad.axes[2] * 90; // Map horizontal movement to steering (-90 to 90)
 
+                // Send throttle and steering values to WebSocket server
+                var controls = throttle.toFixed(0) + "," + steering.toFixed(0);
+                ws.send(controls);
+                var delayInMilliseconds = 100; //delay
+                console.log("S: " + controls + ", T: ");
+            } 
+            var gamepad = navigator.getGamepads()[2];
+            if (gamepad) {
+                var throttle = ((gamepad.axes[1] - 1) * -90)-90; // Map vertical movement to throttle (0-100)
+                var steering = gamepad.axes[2] * 90; // Map horizontal movement to steering (-90 to 90)
+
+                // Send throttle and steering values to WebSocket server
+                var controls = throttle.toFixed(0) + "," + steering.toFixed(0);
+                ws.send(controls);
+                var delayInMilliseconds = 100; //delay
+                console.log("S: " + controls + ", T: ");
+            } 
+            var gamepad = navigator.getGamepads()[3];
+            if (gamepad) {
+                var throttle = ((gamepad.axes[1] - 1) * -90)-90; // Map vertical movement to throttle (0-100)
+                var steering = gamepad.axes[2] * 90; // Map horizontal movement to steering (-90 to 90)
+
+                // Send throttle and steering values to WebSocket server
+                var controls = throttle.toFixed(0) + "," + steering.toFixed(0);
+                ws.send(controls);
+                var delayInMilliseconds = 100; //delay
+                console.log("S: " + controls + ", T: ");
+            } 
+            //else {
+            //    console.log(navigator.getGamepads());
+            //}
+
+            setTimeout(function() {
             // Call updateControls again on the next animation frame
             requestAnimationFrame(updateControls);
+            }, delayInMilliseconds);
         }
 
         // Initialize WebSocket connection and start updating controls
